Add main articles section and style it

--- a/index.html
+++ b/index.html
@@ -20,6 +20,35 @@
             </ul>
         </div>
     </nav>
+
+    <main class="main-section">
+        <article  class="main-article">
+            <h1><a href="">Facebook invests $5.7B in Indian mobile carrier Reliance Jio to bring small businesses online</a></h1>
+            <span class="article-meta">
+                <span>by Ivan Mehta</span>&nbsp;&nbsp;
+                <span><i class="far fa-clock"></i>&nbsp;1 hour ago</span>&nbsp;&nbsp;
+                <span><i class="fas fa-share-alt"></i>&nbsp; 0</span>
+            </span>
+        </article>
+        <article class="main-article">
+            <span class="article-category">APPS</span>
+            <h1><a href="">WhatsApp teams up with the WHO to release 21 new stickers about quarantine life</h1></a>
+            <span class="article-meta">
+                <span>by Ivan Mehta</span>&nbsp;&nbsp;
+                <span><i class="far fa-clock"></i>&nbsp;1 hour ago</span>&nbsp;&nbsp;
+                <span><i class="fas fa-share-alt"></i>&nbsp; 0</span>
+            </span>
+        </article>
+        <article class="main-article">
+            <span class="article-category">GEAR</span>
+            <h1><a href="">Google finally lets you adjust ‘Okay Google’ sensitivity</h1></a>
+            <span class="article-meta">
+                <span>by Ivan Mehta</span>&nbsp;&nbsp;
+                <span><i class="far fa-clock"></i>&nbsp;1 hour ago</span>&nbsp;&nbsp;
+                <span><i class="fas fa-share-alt"></i>&nbsp; 0</span>
+            </span>
+        </article>
+    </main>
 </body>
 
 </html>
