Fix indentation issues

--- a/index.html
+++ b/index.html
@@ -1,59 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>TNW</title>
+		<link rel="stylesheet" href="css-reset.css">
+		<link rel="stylesheet" href="style.css">
+		<script src="https://kit.fontawesome.com/f2b651e885.js" crossorigin="anonymous"></script>
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TNW</title>
-    <link rel="stylesheet" href="css-reset.css">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/f2b651e885.js" crossorigin="anonymous"></script>
-</head>
+	<body>
+		<nav>
+				<a href="#"><img src="./img/tnw.svg" alt="TNW logo"></a>
+				<div>
+						<ul>
+								<li><i class="fas fa-search"></i></li>
+								<li><i class="fas fa-bars"></i></li>
+						</ul>
+				</div>
+		</nav>
 
-<body>
-    <nav>
-        <a href="#"><img src="./img/tnw.svg" alt="TNW logo"></a>
-        <div>
-            <ul>
-                <li><i class="fas fa-search"></i></li>
-                <li><i class="fas fa-bars"></i></li>
-            </ul>
-        </div>
-    </nav>
-
-    <main>
-        <section class="hero-section">
-            <article  class="main-article article1">
-                <h1><a href="">Facebook invests $5.7B in Indian mobile carrier Reliance Jio to bring small businesses online</a></h1>
-                <span class="article-meta">
-                    <span>by Ivan Mehta</span>&nbsp;&nbsp;
-                    <span><i class="far fa-clock"></i>&nbsp;1 hour ago</span>&nbsp;&nbsp;
-                    <span><i class="fas fa-share-alt"></i>&nbsp; 0</span>
-                </span>
-            </article>
-            <article class="main-article article2">
-                <span class="article-category">APPS</span>
-                <h1><a href="">WhatsApp teams up with the WHO to release 21 new stickers about quarantine life</h1></a>
-                <span class="article-meta">
-                    <span>by Ivan Mehta</span>&nbsp;&nbsp;
-                    <span><i class="far fa-clock"></i>&nbsp;1 hour ago</span>&nbsp;&nbsp;
-                    <span><i class="fas fa-share-alt"></i>&nbsp; 0</span>
-                </span>
-            </article>
-            <article class="main-article article3">
-                <span class="article-category">GEAR</span>
-                <h1><a href="">Google finally lets you adjust ‘Okay Google’ sensitivity</h1></a>
-                <span class="article-meta">
-                    <span>by Ivan Mehta</span>&nbsp;&nbsp;
-                    <span><i class="far fa-clock"></i>&nbsp;1 hour ago</span>&nbsp;&nbsp;
-                    <span><i class="fas fa-share-alt"></i>&nbsp; 0</span>
-                </span>
-            </article>
-        </section>
-        <section class="latest">
-            <p><a href="#">Latest news</a></p>
-        </section>
-    </main>
-</body>
+		<main>
+			<section class="hero-section">
+				<article  class="main-article article1">
+					<h1><a href="">Facebook invests $5.7B in Indian mobile carrier Reliance Jio to bring small businesses online</a></h1>
+					<span class="article-meta">
+						<span>by Ivan Mehta</span>&nbsp;&nbsp;
+						<span><i class="far fa-clock"></i>&nbsp;1 hour ago</span>&nbsp;&nbsp;
+						<span><i class="fas fa-share-alt"></i>&nbsp; 0</span>
+					</span>
+				</article>
+				<article class="main-article article2">
+					<span class="article-category">APPS</span>
+					<h1><a href="">WhatsApp teams up with the WHO to release 21 new stickers about quarantine life</h1></a>
+					<span class="article-meta">
+						<span>by Ivan Mehta</span>&nbsp;&nbsp;
+						<span><i class="far fa-clock"></i>&nbsp;1 hour ago</span>&nbsp;&nbsp;
+						<span><i class="fas fa-share-alt"></i>&nbsp; 0</span>
+					</span>
+				</article>
+				<article class="main-article article3">
+					<span class="article-category">GEAR</span>
+					<h1><a href="">Google finally lets you adjust ‘Okay Google’ sensitivity</h1></a>
+					<span class="article-meta">
+						<span>by Ivan Mehta</span>&nbsp;&nbsp;
+						<span><i class="far fa-clock"></i>&nbsp;1 hour ago</span>&nbsp;&nbsp;
+						<span><i class="fas fa-share-alt"></i>&nbsp; 0</span>
+					</span>
+				</article>
+			</section>
+			<section class="latest">
+				<p class="category-name"><a href="#">Latest news <i class="fas fa-chevron-right"></i></a></p>
+				<div class="latest-wrapper">
+					<article class="latest-article">
+						<figure>
+							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<figcaption>
+								<p>How to get constructive feedback as a designer</p>
+								<span>Sungjoon Steve Won <i class="fas fa-circle"></i> 33 minutes ago</span>
+							</figcaption>
+						</figure>
+					</article>
+					<article class="latest-article">
+						<figure>
+							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<figcaption>
+								<p>How to get constructive feedback as a designer</p>
+								<span>Sungjoon Steve Won <i class="fas fa-circle"></i> 33 minutes ago</span>
+							</figcaption>
+						</figure>
+					</article>
+					<article class="latest-article">
+						<figure>
+							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<figcaption>
+								<p>How to get constructive feedback as a designer</p>
+								<span>Sungjoon Steve Won <i class="fas fa-circle"></i> 33 minutes ago</span>
+							</figcaption>
+						</figure>
+					</article>
+					<article class="latest-article">
+						<figure>
+							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<figcaption>
+								<p>How to get constructive feedback as a designer</p>
+								<span>Sungjoon Steve Won <i class="fas fa-circle"></i> 33 minutes ago</span>
+							</figcaption>
+						</figure>
+					</article>
+					<article class="latest-article">
+						<figure>
+							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<figcaption>
+								<p>How to get constructive feedback as a designer</p>
+								<span>Sungjoon Steve Won <i class="fas fa-circle"></i> 33 minutes ago</span>
+							</figcaption>
+						</figure>
+					</article>
+					<article class="latest-article">
+						<figure>
+							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<figcaption>
+								<p>How to get constructive feedback as a designer</p>
+								<span>Sungjoon Steve Won <i class="fas fa-circle"></i> 33 minutes ago</span>
+							</figcaption>
+						</figure>
+					</article>
+					<article class="latest-article">
+						<figure>
+							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<figcaption>
+								<p>How to get constructive feedback as a designer</p>
+								<span>Sungjoon Steve Won <i class="fas fa-circle"></i> 33 minutes ago</span>
+							</figcaption>
+						</figure>
+					</article>
+					<article class="latest-article">
+						<figure>
+							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<figcaption>
+								<p>How to get constructive feedback as a designer</p>
+								<span>Sungjoon Steve Won <i class="fas fa-circle"></i> 33 minutes ago</span>
+							</figcaption>
+						</figure>
+					</article>
+				</div>
+			</section>
+		</main>
+	</body>
 
 </html>
