Add funding section and do basic styling

--- a/index.html
+++ b/index.html
@@ -126,6 +126,38 @@
 					</article>
 				</div>
 			</section>
+			<section class="latest-funding">
+				<p class="category-name"><a href="#">Latest funding rounds on Index.co &nbsp;<i class="fas fa-chevron-right"></i></a></p>
+				<div>
+					<a href="">See more</a>
+					<a href="">Get updates by email</a>
+					<a href="">Add info</a>
+				</div>
+				<div class="latest-funding-wrapper">
+					<article class="funding-article">
+						<h1 class="funding-header">Bokio</h1>
+						<div class="funding-details">
+							<img src="./img/bokio-image.jpeg" alt="">
+							<div>
+								<p>$3.3M</p>
+								<span>SEED FUND</span>
+							</div>
+						</div>
+						<div>
+							<p>Accounting, +3</p>
+							<p>Creandum, +7</p>
+						</div>
+						<hr>
+						<p>
+							Bokio Raises €7.4M in Funding; Merges With Red Flag <span>on FinSMEs</span>
+						</p>
+					</article>
+					<article class="funding-article"></article>
+					<article class="funding-article"></article>
+
+				</div>
+
+			</section>
 		</main>
 	</body>
 
