Re-arrange latest-news section
- applied grid to make it more aligned and rsponsive
- resized the contents
- added media queries for medium and large screens

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>TNW</title>
 		<link rel="stylesheet" href="css-reset.css">
-		<link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/f2b651e885.js" crossorigin="anonymous"></script>
 	</head>
 
@@ -57,7 +58,7 @@
 							<img src="./img/feedback-design-516x270.png" alt="feedback design">
 							<figcaption>
 								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-circle"></i> 33 minutes ago</span>
+								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
 							</figcaption>
 						</figure>
 					</article>
@@ -66,7 +67,7 @@
 							<img src="./img/feedback-design-516x270.png" alt="feedback design">
 							<figcaption>
 								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-circle"></i> 33 minutes ago</span>
+								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
 							</figcaption>
 						</figure>
 					</article>
@@ -75,7 +76,7 @@
 							<img src="./img/feedback-design-516x270.png" alt="feedback design">
 							<figcaption>
 								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-circle"></i> 33 minutes ago</span>
+								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
 							</figcaption>
 						</figure>
 					</article>
@@ -84,7 +85,7 @@
 							<img src="./img/feedback-design-516x270.png" alt="feedback design">
 							<figcaption>
 								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-circle"></i> 33 minutes ago</span>
+								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
 							</figcaption>
 						</figure>
 					</article>
@@ -93,7 +94,7 @@
 							<img src="./img/feedback-design-516x270.png" alt="feedback design">
 							<figcaption>
 								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-circle"></i> 33 minutes ago</span>
+								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
 							</figcaption>
 						</figure>
 					</article>
@@ -102,7 +103,7 @@
 							<img src="./img/feedback-design-516x270.png" alt="feedback design">
 							<figcaption>
 								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-circle"></i> 33 minutes ago</span>
+								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
 							</figcaption>
 						</figure>
 					</article>
@@ -111,7 +112,7 @@
 							<img src="./img/feedback-design-516x270.png" alt="feedback design">
 							<figcaption>
 								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-circle"></i> 33 minutes ago</span>
+								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
 							</figcaption>
 						</figure>
 					</article>
@@ -120,7 +121,7 @@
 							<img src="./img/feedback-design-516x270.png" alt="feedback design">
 							<figcaption>
 								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-circle"></i> 33 minutes ago</span>
+								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
 							</figcaption>
 						</figure>
 					</article>
