--- a/index.html
+++ b/index.html
@@ -130,9 +130,11 @@
 			<section class="latest-funding">
 				<p class="category-name"><a href="#">Latest funding rounds on Index.co &nbsp;<i class="fas fa-chevron-right"></i></a></p>
 				<div>
-					<a href="">See more</a>
-					<a href="">Get updates by email</a>
-					<a href="">Add info</a>
+					<ul>
+						<li><a href="">See more</a></li>
+						<li><a href="">Get updates by email</a></li>
+						<li><a href="">Add info</a></li>
+					</ul>
 				</div>
 				<div class="latest-funding-wrapper">
 					<article class="funding-article">
@@ -145,16 +147,68 @@
 							</div>
 						</div>
 						<div>
-							<p>Accounting, +3</p>
-							<p>Creandum, +7</p>
+							<p><i class="fas fa-tag"></i>Accounting, +3</p>
+							<p><i class="fas fa-briefcase"></i>Creandum, +7</p>
 						</div>
 						<hr>
-						<p>
+						<p class="raise">
 							Bokio Raises €7.4M in Funding; Merges With Red Flag <span>on FinSMEs</span>
 						</p>
 					</article>
-					<article class="funding-article"></article>
-					<article class="funding-article"></article>
+					<article class="funding-article">
+						<h1 class="funding-header">Bokio</h1>
+						<div class="funding-details">
+							<img src="./img/bokio-image.jpeg" alt="">
+							<div>
+								<p class="funding-amount">$3.3M</p>
+								<span class="funding-type">SEED FUND</span>
+							</div>
+						</div>
+						<div>
+							<p><i class="fas fa-tag"></i>Accounting, +3</p>
+							<p><i class="fas fa-briefcase"></i>Creandum, +7</p>
+						</div>
+						<hr>
+						<p class="raise">
+							Bokio Raises €7.4M in Funding; Merges With Red Flag <span>on FinSMEs</span>
+						</p>
+					</article>
+					<article class="funding-article">
+						<h1 class="funding-header">Bokio</h1>
+						<div class="funding-details">
+							<img src="./img/bokio-image.jpeg" alt="">
+							<div>
+								<p class="funding-amount">$3.3M</p>
+								<span class="funding-type">SEED FUND</span>
+							</div>
+						</div>
+						<div>
+							<p><i class="fas fa-tag"></i>Accounting, +3</p>
+							<p><i class="fas fa-briefcase"></i>Creandum, +7</p>
+						</div>
+						<hr>
+						<p class="raise">
+							Bokio Raises €7.4M in Funding; Merges With Red Flag <span>on FinSMEs</span>
+						</p>
+					</article>
+					<article class="funding-article">
+						<h1 class="funding-header">Bokio</h1>
+						<div class="funding-details">
+							<img src="./img/bokio-image.jpeg" alt="">
+							<div>
+								<p class="funding-amount">$3.3M</p>
+								<span class="funding-type">SEED FUND</span>
+							</div>
+						</div>
+						<div>
+							<p><i class="fas fa-tag"></i>Accounting, +3</p>
+							<p><i class="fas fa-briefcase"></i>Creandum, +7</p>
+						</div>
+						<hr>
+						<p class="raise">
+							Bokio Raises €7.4M in Funding; Merges With Red Flag <span>on FinSMEs</span>
+						</p>
+					</article>
 				</div>
 			</section>
 			<aside>
