Add latest deals section

--- a/index.html
+++ b/index.html
@@ -265,9 +265,68 @@
 
 				</section>
 				<section>
-					
+
 				</section>
 			</aside>
+			<section class="deals latest">
+				<p class="category-name"><a href="#">Latest deals <i class="fas fa-chevron-right"></i></a></p>
+				<div class="latest-wrapper">
+					<article class="latest-article">
+						<figure>
+							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<figcaption>
+								<p>How to get constructive feedback as a designer</p>
+								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
+							</figcaption>
+						</figure>
+					</article>
+					<article class="latest-article">
+						<figure>
+							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<figcaption>
+								<p>How to get constructive feedback as a designer</p>
+								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
+							</figcaption>
+						</figure>
+					</article>
+					<article class="latest-article">
+						<figure>
+							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<figcaption>
+								<p>How to get constructive feedback as a designer</p>
+								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
+							</figcaption>
+						</figure>
+					</article>
+					<article class="latest-article">
+						<figure>
+							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<figcaption>
+								<p>How to get constructive feedback as a designer</p>
+								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
+							</figcaption>
+						</figure>
+					</article>
+					<article class="latest-article">
+						<figure>
+							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<figcaption>
+								<p>How to get constructive feedback as a designer</p>
+								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
+							</figcaption>
+						</figure>
+					</article>
+					<article class="latest-article">
+						<figure>
+							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<figcaption>
+								<p>How to get constructive feedback as a designer</p>
+								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
+							</figcaption>
+						</figure>
+					</article>
+				</div>
+			</section>
 		</main>
 	</body>
 
