Add bottom navigation

--- a/index.html
+++ b/index.html
@@ -328,6 +328,33 @@
 				</div>
 			</section>
 		</main>
+
+		<nav class="nav-bottom">
+			<div class="social-links">
+				<ul>
+					<li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+					<li><a href=""><i class="fab fa-twitter"></i></a></li>
+					<li><a href=""><i class="fab fa-youtube-square"></i></a></li>
+					<li><a href=""><i class="fab fa-instagram-square"></i></a></li>
+					<li><a href=""><i class="fab fa-pinterest"></i></a></li>
+					<li><a href=""><i class="fas fa-rss"></i></a></li>
+					<li><a href=""><i class="far fa-envelope"></i></a></li>
+				</ul>
+			</div>
+			<div class="site-links">
+				<ul>
+					<li><a href="">EVENTS</a></li>
+					<li><a href="">ABOUT</a></li>
+					<li><a href="">ADVERTISE</a></li>
+					<li><a href="">JOBS</a></li>
+					<li><a href="">CONTACT</a></li>
+				</ul>
+			</div>
+		</nav>
+
+		<footer>
+
+		</footer>
 	</body>
 
 </html>
