Add page footer

--- a/index.html
+++ b/index.html
@@ -352,8 +352,10 @@
 			</div>
 		</nav>
 
-		<footer>
-
+		<footer class="page-footer">
+			<p><img src="./img/tnw.svg" alt="TNW logo"><span>© 2006–2020 The Next Web B.V.</span></p>
+			<p>Made with ♥ in Amsterdam.</p>
+			<p> Powered by <img src="./img/stackpath.svg" alt="Stackpath logo"></p>
 		</footer>
 	</body>
 
