Change nav selector to class and turn 4 spaces into 2

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 
 	<body>
-		<nav>
+		<nav class="nav-top">
 				<a href="#"><img src="./img/tnw.svg" alt="TNW logo"></a>
 				<div>
 						<ul>
