--- a/index.html
+++ b/index.html
@@ -520,7 +520,10 @@
 				</section>
 			</aside>
 			<section class="deals latest">
-				<p class="category-name"><a href="#">Latest deals <i class="fas fa-chevron-right"></i></a></p>
+				<div class="top">
+					<p class="category-name"><a href="#">Latest deals <i class="fas fa-chevron-right"></i></a></p>
+					<p class="see">See all Deals</p>
+				</div>
 				<div class="latest-wrapper">
 					<article class="latest-article">
 						<figure>
