--- a/index.html
+++ b/index.html
@@ -586,11 +586,11 @@
 		<nav class="nav-bottom">
 			<div class="social-links">
 				<ul>
-					<li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+					<li><a href=""><i class="fab fa-facebook-square"></i></a></li>
 					<li><a href=""><i class="fab fa-twitter"></i></a></li>
-					<li><a href=""><i class="fab fa-youtube-square"></i></a></li>
-					<li><a href=""><i class="fab fa-instagram-square"></i></a></li>
-					<li><a href=""><i class="fab fa-pinterest"></i></a></li>
+					<li><a href=""><i class="fab fa-youtube"></i></a></li>
+					<li><a href=""><i class="fab fa-instagram"></i></a></li>
+					<li><a href=""><i class="fab fa-pinterest-p"></i></a></li>
 					<li><a href=""><i class="fas fa-rss"></i></a></li>
 					<li><a href=""><i class="far fa-envelope"></i></a></li>
 				</ul>
@@ -607,8 +607,8 @@
 		</nav>
 
 		<footer class="page-footer">
-			<p><img src="./img/tnw.svg" alt="TNW logo"><span>© 2006–2020 The Next Web B.V.</span></p>
-			<p>Made with ♥ in Amsterdam.</p>
+			<p><img src="./img/tnw.svg" alt="TNW logo"><span> © 2006–2020 The Next Web B.V.</span></p>
+			<p>Made with <span class="love">♥</span>  in Amsterdam.</p>
 			<p> Powered by <img src="./img/stackpath.svg" alt="Stackpath logo"></p>
 		</footer>
 	</body>
