Rework latest deals section - Add all the contents and applied classes - Apply aspect ratio to main div - Apply flex to screens below 768px - Apply grid to screens above 767px

--- a/index.html
+++ b/index.html
@@ -519,66 +519,93 @@
 					<hr>
 				</section>
 			</aside>
-			<section class="deals latest">
+			<section class="deals">
 				<div class="top">
 					<p class="category-name"><a href="#">Latest deals <i class="fas fa-chevron-right"></i></a></p>
 					<p class="see">See all Deals</p>
 				</div>
-				<div class="latest-wrapper">
-					<article class="latest-article">
-						<figure>
-							<img src="./img/feedback-design-516x270.png" alt="feedback design">
-							<figcaption>
-								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
-							</figcaption>
-						</figure>
+				<div class="deals-wrapper">
+					<article class="deals-article">
+						<div class="deals-bg">
+							<div class="deals-bg2"></div>
+
+						</div>
+						<div class="deals-info">
+							<h2><a class="deals-title" href="">The Increase Your Google App Productivity with Google Script Bundle</a></h2>
+							<p><span class="deals-price" >$1400</span>&nbsp;&nbsp;<span class="deals-discounted">$34.99</span></p>
+						</div>
 					</article>
-					<article class="latest-article">
-						<figure>
-							<img src="./img/feedback-design-516x270.png" alt="feedback design">
-							<figcaption>
-								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
-							</figcaption>
-						</figure>
+					<article class="deals-article">
+						<div class="deals-bg">
+							<div class="deals-bg2"></div>
+
+						</div>
+						<div class="deals-info">
+							<h2><a class="deals-title" href="">The Increase Your Google App Productivity with Google Script Bundle</a></h2>
+							<p><span class="deals-price" >$1400</span>&nbsp;&nbsp;<span class="deals-discounted">$34.99</span></p>
+						</div>
 					</article>
-					<article class="latest-article">
-						<figure>
-							<img src="./img/feedback-design-516x270.png" alt="feedback design">
-							<figcaption>
-								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
-							</figcaption>
-						</figure>
+					<article class="deals-article">
+						<div class="deals-bg">
+							<div class="deals-bg2"></div>
+
+						</div>
+						<div class="deals-info">
+							<h2><a class="deals-title" href="">The Increase Your Google App Productivity with Google Script Bundle</a></h2>
+							<p><span class="deals-price" >$1400</span>&nbsp;&nbsp;<span class="deals-discounted">$34.99</span></p>
+						</div>
 					</article>
-					<article class="latest-article">
-						<figure>
-							<img src="./img/feedback-design-516x270.png" alt="feedback design">
-							<figcaption>
-								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
-							</figcaption>
-						</figure>
+					<article class="deals-article">
+						<div class="deals-bg">
+							<div class="deals-bg2"></div>
+
+						</div>
+						<div class="deals-info">
+							<h2><a class="deals-title" href="">The Increase Your Google App Productivity with Google Script Bundle</a></h2>
+							<p><span class="deals-price" >$1400</span>&nbsp;&nbsp;<span class="deals-discounted">$34.99</span></p>
+						</div>
 					</article>
-					<article class="latest-article">
-						<figure>
-							<img src="./img/feedback-design-516x270.png" alt="feedback design">
-							<figcaption>
-								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
-							</figcaption>
-						</figure>
+					<article class="deals-article">
+						<div class="deals-bg">
+							<div class="deals-bg2"></div>
+
+						</div>
+						<div class="deals-info">
+							<h2><a class="deals-title" href="">The Increase Your Google App Productivity with Google Script Bundle</a></h2>
+							<p><span class="deals-price" >$1400</span>&nbsp;&nbsp;<span class="deals-discounted">$34.99</span></p>
+						</div>
 					</article>
-					<article class="latest-article">
-						<figure>
-							<img src="./img/feedback-design-516x270.png" alt="feedback design">
-							<figcaption>
-								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
-							</figcaption>
-						</figure>
+					<article class="deals-article">
+						<div class="deals-bg">
+							<div class="deals-bg2"></div>
+
+						</div>
+						<div class="deals-info">
+							<h2><a class="deals-title" href="">The Increase Your Google App Productivity with Google Script Bundle</a></h2>
+							<p><span class="deals-price" >$1400</span>&nbsp;&nbsp;<span class="deals-discounted">$34.99</span></p>
+						</div>
 					</article>
+					<article class="deals-article">
+						<div class="deals-bg">
+							<div class="deals-bg2"></div>
+
+						</div>
+						<div class="deals-info">
+							<h2><a class="deals-title" href="">The Increase Your Google App Productivity with Google Script Bundle</a></h2>
+							<p><span class="deals-price" >$1400</span>&nbsp;&nbsp;<span class="deals-discounted">$34.99</span></p>
+						</div>
+					</article>
+					<article class="deals-article">
+						<div class="deals-bg">
+							<div class="deals-bg2"></div>
+
+						</div>
+						<div class="deals-info">
+							<h2><a class="deals-title" href="">The Increase Your Google App Productivity with Google Script Bundle</a></h2>
+							<p><span class="deals-price" >$1400</span>&nbsp;&nbsp;<span class="deals-discounted">$34.99</span></p>
+						</div>
+					</article>
+					
 				</div>
 			</section>
 		</main>
