Add deals tag and position them to top right

--- a/index.html
+++ b/index.html
@@ -527,7 +527,9 @@
 				<div class="deals-wrapper">
 					<article class="deals-article">
 						<div class="deals-bg">
-							<div class="deals-bg2"></div>
+							<div class="deals-bg2">
+								<p class="deals-tag">90% OFF</p>
+							</div>
 
 						</div>
 						<div class="deals-info">
