Set deals tag display to none for mq below 768px

--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
 					<article class="deals-article">
 						<div class="deals-bg">
 							<div class="deals-bg2">
-								<p class="deals-tag">90% OFF</p>
+								<p class="deals-tag hide-below768 show-above767">90% OFF</p>
 							</div>
 
 						</div>
