Add margin to deals article title and info

--- a/index.html
+++ b/index.html
@@ -530,11 +530,10 @@
 							<div class="deals-bg2">
 								<p class="deals-tag hide-below768 show-above767">90% OFF</p>
 							</div>
-
 						</div>
 						<div class="deals-info">
 							<h2><a class="deals-title" href="">The Increase Your Google App Productivity with Google Script Bundle</a></h2>
-							<p><span class="deals-price" >$1400</span>&nbsp;&nbsp;<span class="deals-discounted">$34.99</span></p>
+							<p class="deals-price"><span class="deals-base" >$1400</span>&nbsp;&nbsp;<span class="deals-discounted">$34.99</span></p>
 						</div>
 					</article>
 					<article class="deals-article">
