add contents for latest-article section

--- a/index.html
+++ b/index.html
@@ -55,73 +55,81 @@
 				<div class="latest-wrapper">
 					<article class="latest-article">
 						<figure>
-							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<div>
+							</div>
 							<figcaption>
-								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
+								<p><a href="#">These 4 types of website visitors will get you higher conversion rates</a> </p>
+								<span><a href="#">Aleksandra Lazovic</a> </span> <i class="fas fa-minus"></i> <span> 3 hours ago</span>
 							</figcaption>
 						</figure>
 					</article>
 					<article class="latest-article">
 						<figure>
-							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<div>
+							</div>
 							<figcaption>
-								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
+								<p><a href="#">Google now alerts you when search results suck</a> </p>
+								<span><a href="#">Elijah Ayandokun</a> </span> <i class="fas fa-minus"></i> <span> 3 hours ago</span>
 							</figcaption>
 						</figure>
 					</article>
 					<article class="latest-article">
 						<figure>
-							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<div>
+							</div>
 							<figcaption>
-								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
+								<p><a href="#">Some OnePlus 8 Pro users are complaining about problems with their displays</a> </p>
+								<span><a href="#">Ivan Mehta</a> </span> <i class="fas fa-minus"></i> <span> 4 hours ago</span>
 							</figcaption>
 						</figure>
 					</article>
 					<article class="latest-article">
 						<figure>
-							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<div>
+							</div>
 							<figcaption>
-								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
+								<p><a href="#">Innovative leaders must practice ‘radical empathy’ — especially in times of isolation</a> </p>
+								<span><a href="#">Kara Pecknold</a> </span> <i class="fas fa-minus"></i> <span> 4 hours ago</span>
 							</figcaption>
 						</figure>
 					</article>
 					<article class="latest-article">
 						<figure>
-							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<div>
+							</div>
 							<figcaption>
-								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
+								<p><a href="#">Boston Dynamics is open-sourcing its robot tech to help hospitals fight coronavirus</a> </p>
+								<span><a href="#">Elijah Ayandokun</a> </span> <i class="fas fa-minus"></i> <span> 5 hours ago</span>
 							</figcaption>
 						</figure>
 					</article>
 					<article class="latest-article">
 						<figure>
-							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<div>
+							</div>
 							<figcaption>
-								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
+								<p><a href="#">Pardon the Intrusion #16: Phishing in the time of COVID-19</a> </p>
+								<span><a href="#">Abdullah Numan</a> </span> <i class="fas fa-minus"></i> <span> 7 hours ago</span>
 							</figcaption>
 						</figure>
 					</article>
 					<article class="latest-article">
 						<figure>
-							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<div>
+							</div>
 							<figcaption>
-								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
+								<p><a href="#">Nintendo tries to outsmart the bell barons of Animal Crossing</a> </p>
+								<span><a href="#">Taiwo Coker</a> </span> <i class="fas fa-minus"></i> <span> 8 hours ago</span>
 							</figcaption>
 						</figure>
 					</article>
 					<article class="latest-article">
 						<figure>
-							<img src="./img/feedback-design-516x270.png" alt="feedback design">
+							<div>
+							</div>
 							<figcaption>
-								<p>How to get constructive feedback as a designer</p>
-								<span>Sungjoon Steve Won <i class="fas fa-minus"></i> 33 minutes ago</span>
+								<p><a href="#">Review: The Levy electric scooter packs swappable batteries and thoughtful design for $499</a> </p>
+								<span><a href="#">Mayokun Odunuga</a> </span> <i class="fas fa-minus"></i> <span> 9 hours ago</span>
 							</figcaption>
 						</figure>
 					</article>
