Fix div size of latest articles section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<div>
 							</div>
 							<figcaption>
-								<p><a href="#">These 4 types of website visitors will get you higher conversion rates</a> </p>
+								<h2><a href="#">These 4 types of website visitors will get you higher conversion rates</a> </h2>
 								<span><a href="#">Aleksandra Lazovic</a> </span> <i class="fas fa-minus"></i> <span> 3 hours ago</span>
 							</figcaption>
 						</figure>
@@ -68,7 +68,7 @@
 							<div>
 							</div>
 							<figcaption>
-								<p><a href="#">Google now alerts you when search results suck</a> </p>
+								<h2><a href="#">Google now alerts you when search results suck</a> </h2>
 								<span><a href="#">Elijah Ayandokun</a> </span> <i class="fas fa-minus"></i> <span> 3 hours ago</span>
 							</figcaption>
 						</figure>
@@ -78,7 +78,7 @@
 							<div>
 							</div>
 							<figcaption>
-								<p><a href="#">Some OnePlus 8 Pro users are complaining about problems with their displays</a> </p>
+								<h2><a href="#">Some OnePlus 8 Pro users are complaining about problems with their displays</a> </h2>
 								<span><a href="#">Ivan Mehta</a> </span> <i class="fas fa-minus"></i> <span> 4 hours ago</span>
 							</figcaption>
 						</figure>
@@ -88,7 +88,7 @@
 							<div>
 							</div>
 							<figcaption>
-								<p><a href="#">Innovative leaders must practice ‘radical empathy’ — especially in times of isolation</a> </p>
+								<h2><a href="#">Innovative leaders must practice ‘radical empathy’ — especially in times of isolation</a> </h2>
 								<span><a href="#">Kara Pecknold</a> </span> <i class="fas fa-minus"></i> <span> 4 hours ago</span>
 							</figcaption>
 						</figure>
@@ -98,7 +98,7 @@
 							<div>
 							</div>
 							<figcaption>
-								<p><a href="#">Boston Dynamics is open-sourcing its robot tech to help hospitals fight coronavirus</a> </p>
+								<h2><a href="#">Boston Dynamics is open-sourcing its robot tech to help hospitals fight coronavirus</a> </h2>
 								<span><a href="#">Elijah Ayandokun</a> </span> <i class="fas fa-minus"></i> <span> 5 hours ago</span>
 							</figcaption>
 						</figure>
@@ -108,7 +108,7 @@
 							<div>
 							</div>
 							<figcaption>
-								<p><a href="#">Pardon the Intrusion #16: Phishing in the time of COVID-19</a> </p>
+								<h2><a href="#">Pardon the Intrusion #16: Phishing in the time of COVID-19</a> </h2>
 								<span><a href="#">Abdullah Numan</a> </span> <i class="fas fa-minus"></i> <span> 7 hours ago</span>
 							</figcaption>
 						</figure>
@@ -118,7 +118,7 @@
 							<div>
 							</div>
 							<figcaption>
-								<p><a href="#">Nintendo tries to outsmart the bell barons of Animal Crossing</a> </p>
+								<h2><a href="#">Nintendo tries to outsmart the bell barons of Animal Crossing</a> </h2>
 								<span><a href="#">Taiwo Coker</a> </span> <i class="fas fa-minus"></i> <span> 8 hours ago</span>
 							</figcaption>
 						</figure>
@@ -128,7 +128,7 @@
 							<div>
 							</div>
 							<figcaption>
-								<p><a href="#">Review: The Levy electric scooter packs swappable batteries and thoughtful design for $499</a> </p>
+								<h2><a href="#">Review: The Levy electric scooter packs swappable batteries and thoughtful design for $499</a> </h2>
 								<span><a href="#">Mayokun Odunuga</a> </span> <i class="fas fa-minus"></i> <span> 9 hours ago</span>
 							</figcaption>
 						</figure>
