Change font size, color and bg color of latest funding section

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 								<span class="funding-type">SEED FUND</span>
 							</div>
 						</div>
-						<div>
+						<div class="funding-company">
 							<p><i class="fas fa-tag"></i>Accounting, +3</p>
 							<p><i class="fas fa-briefcase"></i>Creandum, +7</p>
 						</div>
@@ -172,7 +172,7 @@
 								<span class="funding-type">SEED FUND</span>
 							</div>
 						</div>
-						<div>
+						<div class="funding-company">
 							<p><i class="fas fa-tag"></i>Accounting, +3</p>
 							<p><i class="fas fa-briefcase"></i>Creandum, +7</p>
 						</div>
@@ -190,7 +190,7 @@
 								<span class="funding-type">SEED FUND</span>
 							</div>
 						</div>
-						<div>
+						<div class="funding-company">
 							<p><i class="fas fa-tag"></i>Accounting, +3</p>
 							<p><i class="fas fa-briefcase"></i>Creandum, +7</p>
 						</div>
@@ -199,7 +199,7 @@
 							Bokio Raises €7.4M in Funding; Merges With Red Flag <span>on FinSMEs</span>
 						</p>
 					</article>
-					<article class="funding-article hide768 show1024">
+					<article class="funding-article">
 						<h1 class="funding-header">Bokio</h1>
 						<div class="funding-details">
 							<img src="./img/bokio-image.jpeg" alt="">
@@ -208,7 +208,7 @@
 								<span class="funding-type">SEED FUND</span>
 							</div>
 						</div>
-						<div>
+						<div class="funding-company">
 							<p><i class="fas fa-tag"></i>Accounting, +3</p>
 							<p><i class="fas fa-briefcase"></i>Creandum, +7</p>
 						</div>
