Fix show hide fourth article in latest funding section

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 							Bokio Raises €7.4M in Funding; Merges With Red Flag <span>on FinSMEs</span>
 						</p>
 					</article>
-					<article class="funding-article">
+					<article class="funding-article hide768 show1024">
 						<h1 class="funding-header">Bokio</h1>
 						<div class="funding-details">
 							<img src="./img/bokio-image.jpeg" alt="">
