add margin for latest-funding title

--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
 				<p class="category-name"><a href="#">Latest funding rounds on Index.co &nbsp;<i class="fas fa-chevron-right"></i></a></p>
 				<div>
 					<ul>
-						<li><a href="">See more</a></li>
+						<li><a href="" class="no-padding">See more</a></li>
 						<li><a href="">Get updates by email</a></li>
-						<li><a href="">Add info</a></li>
+						<li><a href="" class="no-border">Add info</a></li>
 					</ul>
 				</div>
 				<div class="latest-funding-wrapper">
