--- a/index.html
+++ b/index.html
@@ -136,12 +136,13 @@
 				</div>
 			</section>
 			<section class="latest-funding">
-				<p class="category-name"><a href="#">Latest funding rounds on Index.co &nbsp;<i class="fas fa-chevron-right"></i></a></p>
-				<div>
+				<div class="flex">
+					<p class="category-name"><a href="#">Latest funding rounds on Index.co &nbsp;<i class="fas fa-chevron-right"></i></a></p>
+				
 					<ul>
-						<li><a href="" class="no-padding">See more</a></li>
+						<li><a href="" class="first">See more</a></li>
 						<li><a href="">Get updates by email</a></li>
-						<li><a href="" class="no-border">Add info</a></li>
+						<li><a href="" class="second">Add info</a></li>
 					</ul>
 				</div>
 				<div class="latest-funding-wrapper">
