add margin to funding company

--- a/index.html
+++ b/index.html
@@ -167,15 +167,15 @@
 					<article class="funding-article">
 						<h1 class="funding-header">Bokio</h1>
 						<div class="funding-details">
-							<img src="./img/bokio-image.jpeg" alt="">
+							<img src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F1201362426328944640%2FkTYCwRXD.jpg&amp;signature=7bb51a91c59e3179168b0466a2afe011" alt="">
 							<div>
-								<p class="funding-amount">$3.3M</p>
-								<span class="funding-type">SEED FUND</span>
+								<p class="funding-amount">$50M</p>
+								<span class="funding-type">SERIES B</span>
 							</div>
 						</div>
 						<div class="funding-company">
-							<p><i class="fas fa-tag"></i>Accounting, +3</p>
-							<p><i class="fas fa-briefcase"></i>Creandum, +7</p>
+							<p><i class="fas fa-tag"></i>Insurance</p>
+							<p><i class="fas fa-briefcase"></i>Valar Ventures, +4</p>
 						</div>
 						<hr>
 						<p class="raise">
